# whisper-transcribe

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
transcribe/: __init__.py  __main__.py  transcribe.py  transcription.py
whisper_transcribe/: __init__.py  config.py  parser.py  transcription.py
