[tool.poetry]
name = "whisper-transcribe"
version = "1.11"
description = "A simple script to transcribe any audio file using faster-whisper API"
authors = ["SirenityK <eldarielmario@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/SirenityK/whisper-transcribe"

[tool.poetry.dependencies]
python = "^3.8"
faster-whisper = "^1.0.3"
pyperclip = "^1.9.0"
yt-dlp = "^2024.10.7"

[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[tool.poetry.scripts]
transcribe = "whisper_transcribe:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
